unpackaged/main/default/objects/Application__c/fields/Hospital_Clinic_Zip__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Clinic_Zip__c</fullName>
    <description>Hospital Address (Zip Code).</description>
    <label>Hospital/Clinic Zip</label>
    <length>30</length>
    <type>Text</type>
</CustomField>