unpackaged/main/default/objects/Application__c/fields/How_Did_You_Hear_About_SGK_TAP__c.field-meta.xml
<CustomField>
    <fullName>How_Did_You_Hear_About_SGK_TAP__c</fullName>
    <label>How did you hear about the program?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hospital/Healthcare Provider (e.g. doctor, nurse, patient navigator, social worker)</fullName>
            </value>
            <value>
                <fullName>Internet/Radio/TV</fullName>
            </value>
            <value>
                <fullName>Local Komen Affiliate</fullName>
            </value>
            <value>
                <fullName>Family/Friends/Another Patient</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Komen Breast Care Helpline (1-877 GO KOMEN)</fullName>
            </value>
            <value>
                <fullName>Other (Please Specify)</fullName>
            </value>
            <value>
                <fullName>Komen Breast Care Helpline (1-888-GO KOMEN)</fullName>
                <isActive>false</isActive>
                <label>Komen Breast Care Helpline (1-888-GO KOMEN)</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>