unpackaged/main/default/objects/Application__c/fields/In_Review_Status_Duration__c.field-meta.xml
<CustomField>
    <fullName>In_Review_Status_Duration__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The Duration from In Review to any other Stage. Using Trigger this field get Update.</description>
    <label>In Review Status Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>