unpackaged/main/default/objects/Application__c/fields/Income_Tax_Return__c.field-meta.xml
<CustomField>
    <fullName>Income_Tax_Return__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this Patient Attached Income Tax Return Document along with Application?</description>
    <label>Income Tax Return</label>
    <type>Checkbox</type>
</CustomField>