unpackaged/main/default/objects/Application__c/fields/Income_Verification_is_Valid__c.field-meta.xml
<CustomField>
    <fullName>Income_Verification_is_Valid__c</fullName>
    <description>Check true if Patient/Relative provided income documents are valid.</description>
    <inlineHelpText>Check true if Patient/Relative provided income documents are valid.</inlineHelpText>
    <label>Income Verification Is Valid?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>