unpackaged/main/default/objects/Application__c/fields/Initiating_Factors_for_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Initiating_Factors_for_Contacts__c</fullName>
    <label>Initiating Factors for Contacts</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abnormal screening result</fullName>
            </value>
            <value>
                <fullName>Diagnosis received</fullName>
            </value>
            <value>
                <fullName>Issues receiving treatment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>