unpackaged/main/default/objects/Application__c/fields/Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>