unpackaged/main/default/objects/Application__c/fields/Is_patient_in_active_treatment__c.field-meta.xml
<CustomField>
    <fullName>Is_patient_in_active_treatment__c</fullName>
    <description>Is this Patient  in Active Treatment?</description>
    <label>Is Patient In Active Treatment?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>