unpackaged/main/default/objects/Application__c/fields/Lymphdema_care_or_supplies__c.field-meta.xml
<CustomField>
    <fullName>Lymphdema_care_or_supplies__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the Applicant Needed Financial Support for Lymphdema Care Or Supplies.</description>
    <label>Lymphdema Care Or Supplies</label>
    <type>Checkbox</type>
</CustomField>