unpackaged/main/default/objects/Application__c/fields/Medical_Provider_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Medical_Provider_First_Name__c</fullName>
    <label>Medical Provider First Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>