unpackaged/main/default/objects/Application__c/fields/Method_of_Payment_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Payment_Distribution__c</fullName>
    <description>Mode of Payment Distribution (Electronic Check, Postal Mail etc).</description>
    <label>Method of Payment Distribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electronic Check</fullName>
            </value>
            <value>
                <fullName>Postal Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>