unpackaged/main/default/objects/Application__c/fields/Method_of_treatment_confirmation__c.field-meta.xml
<CustomField>
    <fullName>Method_of_treatment_confirmation__c</fullName>
    <label>Method of treatment confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attach it to my application now</fullName>
            </value>
            <value>
                <fullName>My medical provider will send it separately</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>