unpackaged/main/default/objects/Application__c/fields/Name_of_Patient_app_form_del__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Patient_app_form_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup with Account, to Populate Patient or Applicant Name.</description>
    <label>Name of Patient</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications1</relationshipLabel>
    <relationshipName>Applications1_del</relationshipName>
    <type>Lookup</type>
</CustomField>