unpackaged/main/default/objects/Application__c/fields/Name_on_Account__c.field-meta.xml
<CustomField>
    <fullName>Name_on_Account__c</fullName>
    <description>Beneficiary Name on Account.</description>
    <label>Name on Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>