unpackaged/main/default/objects/Application__c/fields/Need_More_Info_Status_Duration__c.field-meta.xml
<CustomField>
    <fullName>Need_More_Info_Status_Duration__c</fullName>
    <description>The Duration from Need More Information Status to any other Stage . Using Trigger this field get Update.</description>
    <label>Need More Info Status Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>