unpackaged/main/default/objects/Application__c/fields/Need_More_Information__c.field-meta.xml
<CustomField>
    <fullName>Need_More_Information__c</fullName>
    <description>More Information needed for this application.</description>
    <inlineHelpText>Pleas Provide More Information for your application</inlineHelpText>
    <label>Need More Information Comment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>