unpackaged/main/default/objects/Application__c/fields/New_Status_Duration__c.field-meta.xml
<CustomField>
    <fullName>New_Status_Duration__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The Duration from New to any other Stage.</description>
    <label>New Status Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>