unpackaged/main/default/objects/Application__c/fields/No_of_People_in_the_Household__c.field-meta.xml
<CustomField>
    <fullName>No_of_People_in_the_Household__c</fullName>
    <description>Number of People in the Patient/Applicant House.</description>
    <label>No. Of People In The Household</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>