unpackaged/main/default/objects/Application__c/fields/Oral_treatment_medications__c.field-meta.xml
<CustomField>
    <fullName>Oral_treatment_medications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the Applicant Needed Financial Support for Oral Treatment Medications</description>
    <inlineHelpText>Oral treatment medications (e.g. chemotherapy, hormonal therapy, etc.)</inlineHelpText>
    <label>Oral Treatment Medications</label>
    <type>Checkbox</type>
</CustomField>