unpackaged/main/default/objects/Application__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <inlineHelpText>This is used to note if there is additional information that the user needs to provide that isn&apos;t covered by one of the checkbox fields.</inlineHelpText>
    <label>Other</label>
    <type>TextArea</type>
</CustomField>