unpackaged/main/default/objects/Application__c/fields/Other_Breast_Cancer_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Other_Breast_Cancer_Subtype__c</fullName>
    <description>Some subtypes of breast cancer are named for the way they appear under the microscope.</description>
    <label>Other Breast Cancer Subtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>