unpackaged/main/default/objects/Application__c/fields/Other_Breast_Cancer_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Breast_Cancer_Type__c</fullName>
    <description>Other Breast Cancer Type named for the way they appear under the microscope.</description>
    <label>Other Breast Cancer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>