unpackaged/main/default/objects/Application__c/fields/Other_Family_Income_Sources__c.field-meta.xml
<CustomField>
    <fullName>Other_Family_Income_Sources__c</fullName>
    <description>Provide Details of any Other Income comes for Applicant or Patient&apos;s Family.</description>
    <label>Other Family Income Sources</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>