unpackaged/main/default/objects/Application__c/fields/Other_Relationship_to_Patient__c.field-meta.xml
<CustomField>
    <fullName>Other_Relationship_to_Patient__c</fullName>
    <description>Specify other Relationship to Patient.</description>
    <inlineHelpText>Please specify the relationship to Patient</inlineHelpText>
    <label>Other Relationship to Patient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>