unpackaged/main/default/objects/Application__c/fields/Other_Treatment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Other_Treatment_Frequency__c</fullName>
    <description>Patient Other Treatment Frequency</description>
    <label>Other Treatment Frequency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>