unpackaged/main/default/objects/Application__c/fields/Other_Treatment_s__c.field-meta.xml
<CustomField>
    <fullName>Other_Treatment_s__c</fullName>
    <description>Patient is Under any Other Treatments(other than Breast Cancer).</description>
    <label>Other Treatment(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>