unpackaged/main/default/objects/Application__c/fields/Palliative_care__c.field-meta.xml
<CustomField>
    <fullName>Palliative_care__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the Applicant Needed Financial Support for Palliative Care.</description>
    <label>Palliative Care</label>
    <type>Checkbox</type>
</CustomField>