unpackaged/main/default/objects/Application__c/fields/Participating_In_Clinical_Trial__c.field-meta.xml
<CustomField>
    <fullName>Participating_In_Clinical_Trial__c</fullName>
    <inlineHelpText>Are You Currently Participating In A Clinical Trial For Breast Cancer?</inlineHelpText>
    <label>Participating In Clinical Trial?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>