unpackaged/main/default/objects/Application__c/fields/Patient_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Patient_Email_Address__c</fullName>
    <formula>Patient__r.PersonContact.Email</formula>
    <label>Patient Email Address</label>
    <type>Text</type>
</CustomField>