unpackaged/main/default/objects/Application__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <description>Updating this field thru Process Builder, for Populating Applicant Name on Tap Inbox.</description>
    <label>Patient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>