unpackaged/main/default/objects/Application__c/fields/Patient_Need__c.field-meta.xml
<CustomField>
    <fullName>Patient_Need__c</fullName>
    <description>Used to determine the basis on which the Patient is asking for assistance.  The values here are used by Flow (Patient Navigator Matching Flow) to determine which Care Programs should be matched to.  If updating the values here, please also update the flow and Care Programs to match.</description>
    <label>Patient Need</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Patient_Need</valueSetName>
    </valueSet>
</CustomField>