unpackaged/main/default/objects/Application__c/fields/Patient_State__c.field-meta.xml
<CustomField>
    <fullName>Patient_State__c</fullName>
    <formula>Patient__r.PersonContact.MailingState</formula>
    <label>Patient State</label>
    <type>Text</type>
</CustomField>