unpackaged/main/default/objects/Application__c/fields/Pay_Stub__c.field-meta.xml
<CustomField>
    <fullName>Pay_Stub__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Type of Income Verification Provided by Applicant as Pay Stub(net Pay).</description>
    <label>Pay Stub</label>
    <type>Checkbox</type>
</CustomField>