unpackaged/main/default/objects/Application__c/fields/Payable_To__c.field-meta.xml
<CustomField>
    <fullName>Payable_To__c</fullName>
    <description>Whom to be Paid?</description>
    <label>Payable To</label>
    <length>50</length>
    <type>Text</type>
</CustomField>