unpackaged/main/default/objects/Application__c/fields/PeopleSoft_Id__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Id__c</fullName>
    <description>Map this field with People Soft(Vendor) Id while Import/Export data.</description>
    <externalId>true</externalId>
    <label>PeopleSoft Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>