unpackaged/main/default/objects/Application__c/fields/Physician_confirms_patient_inactive_tre__c.field-meta.xml
<CustomField>
    <fullName>Physician_confirms_patient_inactive_tre__c</fullName>
    <description>Has physician confirmed if patient is in active breast cancer treatment?</description>
    <inlineHelpText>Has physician confirmed if patient is in active breast cancer treatment?</inlineHelpText>
    <label>Physician Confirms Active Treatment?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>