unpackaged/main/default/objects/Application__c/fields/Poverty_Level__c.field-meta.xml
<CustomField>
    <fullName>Poverty_Level__c</fullName>
    <description>This field get Auto Calculated based on Financial Information.</description>
    <label>Poverty Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>