unpackaged/main/default/objects/Application__c/fields/Pre_Screening__c.field-meta.xml
<CustomField>
    <fullName>Pre_Screening__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Patient is looking for assistance with screening / mammogram services</description>
    <label>Pre-Screening</label>
    <type>Checkbox</type>
</CustomField>