unpackaged/main/default/objects/Application__c/fields/Prescription_Drug_Co_Pay_Amount__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Drug_Co_Pay_Amount__c</fullName>
    <description>Prescription Drug Co-Pay Amount.</description>
    <label>Prescription Drug Co-Pay Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>