unpackaged/main/default/objects/Application__c/fields/Prescription_Drug_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Drug_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Medicare prescription drug coverage.</description>
    <label>Prescription Drug Coverage</label>
    <type>Checkbox</type>
</CustomField>