unpackaged/main/default/objects/Application__c/fields/Prescription_medication_for_side_effects__c.field-meta.xml
<CustomField>
    <fullName>Prescription_medication_for_side_effects__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is there any side effects for Patient that Prescribed by Doctor?</description>
    <label>Prescription medication for side effects</label>
    <type>Checkbox</type>
</CustomField>