unpackaged/main/default/objects/Application__c/fields/Public_Assistance_Benefit_Notification__c.field-meta.xml
<CustomField>
    <fullName>Public_Assistance_Benefit_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public Assistance Benefit Notification</label>
    <type>Checkbox</type>
</CustomField>