unpackaged/main/default/objects/Application__c/fields/Rejected_Status_Duration__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Status_Duration__c</fullName>
    <description>The Duration from Application Rejected to any other Stage.</description>
    <label>Rejected Status Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>