unpackaged/main/default/objects/Application__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Reasons for Application Rejection.</description>
    <label>Rejection Reason</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>