unpackaged/main/default/objects/Application__c/fields/Relationship_to_Patient__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Patient__c</fullName>
    <description>My Relationship to Patient?</description>
    <label>Relationship to Patient</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
                <default>true</default>
                <label>Self</label>
            </value>
            <value>
                <fullName>Parent_or_Guardian</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Family Member</fullName>
            </value>
            <value>
                <fullName>Social_Worker</fullName>
                <label>Social Worker</label>
            </value>
            <value>
                <fullName>Patient_Navigator</fullName>
                <label>Patient Navigator</label>
            </value>
            <value>
                <fullName>Healthcare Provider</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
                <isActive>false</isActive>
                <label>Doctor</label>
            </value>
            <value>
                <fullName>Nurse</fullName>
                <isActive>false</isActive>
                <label>Nurse</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Spouse or Partner</fullName>
                <isActive>false</isActive>
                <label>Spouse or Partner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>