unpackaged/main/default/objects/Application__c/fields/Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Routing_Number__c</fullName>
    <description>A nine-digit code printed on the bottom of checks to identify the financial institution on which it was drawn.</description>
    <label>Routing Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>