unpackaged/main/default/objects/Application__c/fields/Select_non_suggested_Care_Program__c.field-meta.xml
<CustomField>
    <fullName>Select_non_suggested_Care_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Care Program must be Selected on Available Suggested Care Programs before Approved an Application.</description>
    <label>Select non-suggested Care Program</label>
    <type>Checkbox</type>
</CustomField>