unpackaged/main/default/objects/Application__c/fields/Send_30_Day_Survey__c.field-meta.xml
<CustomField>
    <fullName>Send_30_Day_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked via automation, triggers the Workflow Rule to send the Outbound Message to Qualtrics to send the individual 30 day application survey.</description>
    <label>Send 30 Day Survey</label>
    <type>Checkbox</type>
</CustomField>