unpackaged/main/default/objects/Application__c/fields/Side_effect_management_medication__c.field-meta.xml
<CustomField>
    <fullName>Side_effect_management_medication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the Applicant Needed Financial Support for Side-Effect Management Medication.</description>
    <inlineHelpText>Side-effect management medication (e.g. pain, anti-nausea, etc.)</inlineHelpText>
    <label>Side-Effect Management Medication</label>
    <type>Checkbox</type>
</CustomField>