unpackaged/main/default/objects/Application__c/fields/Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Date__c</fullName>
    <description>The date on which the Medical Provider/Others Signed on.</description>
    <label>Signed Date</label>
    <type>Date</type>
</CustomField>