unpackaged/main/default/objects/Application__c/fields/SSD__c.field-meta.xml
<CustomField>
    <fullName>SSD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this Patient Provided a valid Type of Income as a SSD?</description>
    <label>SSD</label>
    <type>Checkbox</type>
</CustomField>