unpackaged/main/default/objects/Application__c/fields/SSI__c.field-meta.xml
<CustomField>
    <fullName>SSI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this Patient Provided a valid Type of Income as a SSI?</description>
    <label>SSI</label>
    <type>Checkbox</type>
</CustomField>