unpackaged/main/default/objects/Application__c/fields/TAP_Inbox__c.field-meta.xml
<CustomField>
    <fullName>TAP_Inbox__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup with Tap Inbox, Populate Tap Inbox Id.</description>
    <label>TAP Inbox</label>
    <referenceTo>TAP_Inbox__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>