unpackaged/main/default/objects/Application__c/fields/Total_annual_Household_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_annual_Household_Income__c</fullName>
    <description>Combined gross income of all members of a household.</description>
    <label>Total Annual Household Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>