unpackaged/main/default/objects/Application__c/fields/Transportation__c.field-meta.xml
<CustomField>
    <fullName>Transportation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the Applicant Needed Financial Support for Transportation.</description>
    <label>Transportation</label>
    <type>Checkbox</type>
</CustomField>