unpackaged/main/default/objects/Application__c/fields/Treatment_s_received_in_the_past_12_mon__c.field-meta.xml
<CustomField>
    <fullName>Treatment_s_received_in_the_past_12_mon__c</fullName>
    <description>Patient received Treatment(s)  in the past 12 months</description>
    <inlineHelpText>Treatment(s) received in the past 12 months</inlineHelpText>
    <label>Treatments In Past 12 Months?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>chemotherapy</fullName>
                <label>Chemotherapy</label>
            </value>
            <value>
                <fullName>radiation</fullName>
                <label>Radiation</label>
            </value>
            <value>
                <fullName>surgery</fullName>
                <label>Surgery</label>
            </value>
            <value>
                <fullName>hormonal_therapy</fullName>
                <label>Hormonal therapy</label>
            </value>
            <value>
                <fullName>palliative_care</fullName>
                <label>Palliative care</label>
            </value>
            <value>
                <fullName>other</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>