unpackaged/main/default/objects/Application__c/fields/Tumor_Characteristics__c.field-meta.xml
<CustomField>
    <fullName>Tumor_Characteristics__c</fullName>
    <description>Type of Breast Tumors.</description>
    <label>Tumor Characteristics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ER+/PR+</fullName>
            </value>
            <value>
                <fullName>ER-/PR-</fullName>
            </value>
            <value>
                <fullName>ER+/PR-</fullName>
            </value>
            <value>
                <fullName>ER-/PR+</fullName>
            </value>
            <value>
                <fullName>HER2+</fullName>
            </value>
            <value>
                <fullName>HER2-</fullName>
            </value>
            <value>
                <fullName>ER+/PR+/HER2-</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>